bastion.tf
resource "aws_instance" "bastion_host" {
  ami           = data.aws_ami.amazon_linux.id
  instance_type = "t2.micro"

  subnet_id = aws_subnet.public-subnet-1.id

  associate_public_ip_address = true

  security_groups = [aws_security_group.ec2_bastion_security_group.id]

  key_name      = aws_key_pair.EC2-instance_key.key_name

  tags = {
    Name = "bastion-host"
  }
}

resource "aws_security_group" "ec2_bastion_security_group" {
  name        = "ec2_bastion_security_group"
  description = "Allow SSH and HTTP traffic"
  vpc_id      = aws_vpc.terraform-lab-vpc.id

  # Allow ssh access
  ingress {
    from_port   = 22
    to_port     = 22
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"] # from everywhere
  }

  # Allow HTTP
  ingress {
    from_port   = 80
    to_port     = 80
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"] # from everywhere
  }

  # Allow ping
  ingress {
    from_port   = -1
    to_port     = -1
    protocol    = "icmp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  # Allow all out traffic
  egress {
    from_port   = 0
    to_port     = 0
    protocol    = "-1"
    cidr_blocks = ["0.0.0.0/0"]
  }

  tags = {
    Name = "ec2_bastion_security_group"
  }
}
